<resources>
    <string name="app_name">FoodiePal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab1">Recipe</string>
    <string name="tab2">Meal Planner</string>
    <string name="tab3">Blog</string>
    <string name="logout">Logout</string>
    <string name="create_recipe">create recipe</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblAdd">Add</string>
    <string name="lblInstructions">Instructions</string>
    <string name="lblIngredients">Ingredients</string>
    <string name="lblRecipeName">Recipe Name</string>
    <string name="lblAddNewRecipe">Add a recipe</string>
    <string name="lblAddMealPlanner">Add Meal Planner</string>
    <string name="lblDay">Day</string>
    <string name="lblPlan">Plan</string>
    <string name="click_to_select_date">Click to select date</string>
    <string name="lblAddBlog">Add A Blog</string>
    <string name="lblTitle">Title</string>
    <string name="lblContent">Content</string>
    <string name="lblCookingTime">Cooking Time</string>
    <string name="phone_connection_text">6418192647</string>
    <string name="email_communication_text">amitbd1508@gmail.com</string>
    <string name="phone_icon_description">Phone Icon</string>
    <string name="email_icon_description">Email Icon</string>
    <string name="user_image_description">user image</string>
    <string name="food_philosophy_text">This is my Philosophy</string>
    <string name="favorite_recipes_text">Here is my recipes</string>
    <string name="culinary_journey_text">This is my Journey</string>
    <string name="lblMyName">Amit Ghosh</string>
    <string name="lblEmail">amitbd1508@gmail.com</string>
    <string name="lblPhoneNumber">+1 (641) 819-2647</string>
</resources>