<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/lblAddMealPlanner"
        android:textStyle="bold" />



    <Button
        android:id="@+id/btnDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="Recipe Name"
        android:hint="@string/lblDay"
        android:text="@string/click_to_select_date"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="Ingredients"
        android:gravity="top|start"
        android:hint="@string/lblPlan"
        android:inputType="textMultiLine"
        android:maxLines="4" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMealCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="30dp"
            android:text="@string/lblCancel"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMealAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="30dp"
            android:text="@string/lblAdd"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>