<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dialog_title"
        android:text="@string/lblAddNewRecipe"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etRecipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="Recipe Name"
        android:hint="@string/lblRecipeName"
        android:inputType="text" />

    <EditText
        android:id="@+id/etIngredients"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="Ingredients"
        android:gravity="top|start"
        android:hint="@string/lblIngredients"
        android:inputType="textMultiLine"
        android:maxLines="4" />

    <EditText
        android:id="@+id/etInstructions"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="Instructions"
        android:gravity="top|start"
        android:hint="@string/lblInstructions"
        android:inputType="textMultiLine"
        android:maxLines="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="30dp"
            android:text="@string/lblCancel"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="30dp"
            android:text="@string/lblAdd"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>